Prevent jump from scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,6 +11,11 @@
   box-sizing: border-box;
 }
 
+html {
+  margin-left: calc(100vw - 100%);
+  margin-right: 0;
+}
+
 body {
   font-family: 'Alegreya', serif;
   font-size: 18px;
